Defineガード(言い方知らん)を追加しました

--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="collision.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="debugproc.h" />
+    <ClInclude Include="Define.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="explosion.h" />
     <ClInclude Include="fade.h" />
